Fixed the layout breaking with long words.

--- a/archive_chan/static/archive_chan/css/src/style.scss
+++ b/archive_chan/static/archive_chan/css/src/style.scss
@@ -364,6 +364,10 @@ div.content{
         }
     }
 
+    .thread-subject, .thread-comment{
+        word-wrap: break-word;
+    }
+
     .thread-subject{
         font-weight: bold;
     }
